<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
	android:layout_height="match_parent" 
	android:layout_width="match_parent"
	android:padding="10dp" >
	
    <TextView 
	    android:layout_width="wrap_content" 
	    android:text="@string/Name"
		android:layout_height="wrap_content" />
	
	<EditText 
	    android:id="@+id/etName" 
	    android:layout_width="wrap_content"
		android:layout_marginBottom="10dp" 
		android:layout_height="wrap_content"
		android:inputType="text" />
	
	<TextView 
	    android:layout_width="wrap_content" 
	    android:text="@string/Age"
		android:layout_height="wrap_content" />
	
	<EditText 
	    android:id="@+id/etAge" 
	    android:layout_width="wrap_content"
		android:layout_marginBottom="10dp" 
		android:layout_height="wrap_content"
		android:inputType="text" />
	
	<TextView 
	    android:layout_width="wrap_content" 
	    android:text="@string/Username"
		android:layout_height="wrap_content" />
	
	<EditText 
	    android:id="@+id/etUsername" 
	    android:layout_width="wrap_content"
		android:layout_marginBottom="10dp" 
		android:layout_height="wrap_content"
		android:inputType="text" />

	
	<Button android:id="@+id/bLogout" 
	    android:text="@string/Logout"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" />

</LinearLayout>
